<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="match_parent" >
	
	<LinearLayout
	    android:layout_width="match_parent"
		android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
		<TextView 
		    android:id="@+id/travel_text_1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/travel_text_1"
		    android:padding="6dp"
		    android:textAppearance="?android:attr/textAppearanceSmall"/>
		<ImageView 
		    android:id="@+id/travel_image_1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:padding="6dp"
		    android:src="@drawable/shanghai_map"
		    android:contentDescription="@string/travel_image_1"/>
		<TextView 
		    android:id="@+id/travel_text_2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/travel_text_2"
		    android:padding="6dp"
		    android:textAppearance="?android:attr/textAppearanceSmall"/>
		<ImageView 
		    android:id="@+id/travel_image_2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:padding="6dp"
		    android:src="@drawable/shanghai_day"
		    android:contentDescription="@string/travel_image_2"/>
		<TextView 
		    android:id="@+id/travel_text_3"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/travel_text_3"
		    android:padding="6dp"
		    android:textAppearance="?android:attr/textAppearanceSmall"/>
		<TextView 
		    android:id="@+id/travel_text_4"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/travel_text_4"
		    android:padding="6dp"
		    android:textAppearance="?android:attr/textAppearanceSmall"/>
		<TextView 
		    android:id="@+id/travel_text_5"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/travel_text_5"
		    android:padding="6dp"
		    android:textAppearance="?android:attr/textAppearanceSmall"/>
		<ImageView 
		    android:id="@+id/travel_image_3"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:padding="6dp"
		    android:src="@drawable/shanghai_road"
		    android:contentDescription="@string/travel_image_3"/>
		<TextView 
		    android:id="@+id/travel_text_6"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/travel_text_6"
		    android:padding="6dp"
		    android:textAppearance="?android:attr/textAppearanceSmall"/>
		<ImageView 
		    android:id="@+id/travel_image_4"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:padding="6dp"
		    android:src="@drawable/shanghai_night"
		    android:contentDescription="@string/travel_image_4"/>
		<TextView 
		    android:id="@+id/travel_text_7"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/travel_text_7"
		    android:padding="6dp"
		    android:textAppearance="?android:attr/textAppearanceSmall"/>
		<ImageView 
		    android:id="@+id/travel_image_5"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:padding="6dp"
		    android:src="@drawable/shanghai_food"
		    android:contentDescription="@string/travel_image_5"/>
	    
	</LinearLayout>
</ScrollView>
