<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <ImageView 
        android:id="@+id/keynote_photo"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:contentDescription="@string/keynote_photo"/>
    
    <TextView 
        android:id="@+id/keynote_name"
        android:layout_toRightOf="@id/keynote_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keynote_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"/>
    
    <TextView 
        android:id="@+id/keynote_charge"
        android:layout_toRightOf="@id/keynote_photo"
        android:layout_below="@id/keynote_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keynote_charge"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    
    <TextView 
        android:id="@+id/keynote_origin"
        android:layout_toRightOf="@id/keynote_photo"
        android:layout_below="@id/keynote_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keynote_origin"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

</RelativeLayout>
