<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView 
        android:id="@+id/about_title"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:textSize="20sp"
        android:textStyle="bold"/>
    
    <ImageView 
        android:id="@+id/about_image"
        android:layout_below="@id/about_title"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/about_image_caption"/>
         
     <TextView 
        android:id="@+id/about"
        android:layout_below="@id/about_image"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="15sp"/>

</RelativeLayout>
