<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<ImageView 
        android:id="@+id/venue_icon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:padding="4dp"
        android:contentDescription="@string/link_icon"/>
    
    <TextView 
        android:id="@+id/venue_name"
        android:layout_toRightOf="@id/venue_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/link_name"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    
    <TextView 
        android:id="@+id/venue_description"
        android:layout_below="@id/venue_name"
        android:layout_toRightOf="@id/venue_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingBottom="4dp"
        android:text="@string/link_description"/>
    
</RelativeLayout>
