<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/announcement_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/announcement_title"
        android:textColor="@color/red_title"
        android:textSize="16sp"
        android:padding="4dp"/>
    
    <TextView 
        android:id="@+id/announcement_date"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/announcement_date"
        android:textSize="12sp"
        android:padding="4dp"/>
    
    <TextView 
        android:id="@+id/announcement_body"
        android:layout_below="@id/announcement_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/announcement_body"
        android:textSize="16sp"
        android:paddingLeft="4dp"
        android:paddingBottom="4dp"/>

</RelativeLayout>
